api-docs/4.1/Credential.md

<h1 id="nps-api-credential">Credential</h1>

[Get all credentials by type (Auth roles: Admin,App,UserPlus)](Credential/GetByCredentialTypeAsync.md)

[Create a new credential (Auth roles: Admin)](Credential/CreateAsync.md)

[Update existing credential or create new credential (Auth roles: Admin,App)](Credential/Put.md)

[Get specific credential by Id (Auth roles: Admin,App)](Credential/GetById.md)

[Remove a credential (Auth roles: Admin,App)](Credential/Delete.md)

[Update an existing credential (Auth roles: Admin,App)](Credential/UpdateAsync.md)

[ (Auth roles: App)](Credential/NewPasswordFromCredential.md)

[Get credential by user id (Auth roles: App)](Credential/GetByUserId.md)

[Search the existing credentials and discovered users (Auth roles: Admin,App,UserPlus)](Credential/SearchAsync.md)

[Return a credential count (Auth roles: Admin)](Credential/CountAsync.md)

[Delete list of credentials by id (Auth roles: Admin)](Credential/DeleteMultipleAsync.md)

[Get details for a service account (Auth roles: Admin,UserPlus)](Credential/GetServiceAccountDetailsAsync.md)

[Get details for a credential (Auth roles: Admin)](Credential/GetCredentialDetailsAsync.md)

[Get credential from a user (Auth roles: Admin)](Credential/GetCredentialDetailsFromHostUserAsync.md)

[Get discovered scheduled tasks for user id or credential id (Auth roles: Admin,UserPlus)](Credential/SearchScheduledTasksForCredential.md)

[Get list of hosts where credential has been discovered (Auth roles: Admin)](Credential/GetDistinctHostsForCredentialAsync.md)

[Get the user associated with the credential (Auth roles: Admin,App,UserPlus)](Credential/GetHostUserFromCredentialAsync.md)

[Delete the credential associated with the userid (Auth roles: Admin,App)](Credential/DeleteByHostUserAsync.md)

[Set when to rotate the credential (see params) (Auth roles: Admin,App)](Credential/SetOnChangeReset.md)

[Add SSH Certificates (by credential id) (Auth roles: Admin,App)](Credential/AddCredentialSshCertificateAsync.md)

[Add SSH Certificate for user (by userid) (Auth roles: Admin,App)](Credential/AddUserSshCertificateAsync.md)

[Generate SSH Certificates for credential (Auth roles: Admin,App)](Credential/GenerateCredentialSshCertificateAsync.md)

[Generate SSH Certificates by user id (Auth roles: Admin,App)](Credential/GenerateUserSshCertificateAsync.md)

[Get certificate for credential id (Auth roles: Admin,App)](Credential/GetCredentialSshCertificateAsync.md)

[Get certificate by user (Auth roles: Admin,App)](Credential/GetUserSshCertificateAsync.md)

[Get SSH Certificate by username (Auth roles: Admin,App)](Credential/GetSshCertificateByUserAsync.md)

[Get SSH Certificate by domain/username (Auth roles: Admin,App)](Credential/GetSshCertificateByDomainUserAsync.md)

[Get supported SSHKeyGen algorithms (Auth roles: Admin,App)](Credential/GetSshKeyGenAlgorithmsAsync.md)

[Get Credential types (Auth roles: Admin,App)](Credential/GetCredentialTypesAsync.md)

[Get Authentication method types (Auth roles: Admin,App)](Credential/GetAuthenticationMethodTypesAsync.md)

[Set vault for credential (Auth roles: Admin,App)](Credential/SetCredentialVaultAsync.md)

